--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,6 +1,7 @@
-endpoint: ${env:PRISMA_ENDPOINT}
-datamodel: datamodel.prisma
-# secret: ${env:PRISMA_SECRET}
+#endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: https://favagerbase-76173ffd8f.herokuapp.com/sick-fitz-prod/prod
+datamodel: datamodel.prisma 
+secret: ${env:PRISMA_SECRET}
 hooks:
     post-deploy:
         - graphql get-schema -p prisma
